2005-08-29 TADA Tadashi <sho@spc.gr.jp>
	* rd_style.rb, etdiary_style_rb, emptdiary_style.rb: support subtitle_proc.

2005-08-28 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/tdiary_style.rb: fix bug: erro when specify plugin in subtitle.
	* wiki_style.rb: fix bug: subtitle_proc failed when some inline elements in
	subtitle.
	* plugin/00default.rb: disable nyear link when mobile mode.

2005-08-26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: add title_proc and subtitle_proc to Plugin.
	* plugin/00default.rb: add title_of_today and nyear_link.
	* tdiary_style.rb, wiki_style.rb: support subtitle_proc.

2005-08-25 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb and etc: add genre parameter to Plugin#add_conf_proc.

2005-08-24 TADA Tadashi <sho@spc.gr.jp>
	* (testing) change preferences page design.

2005-08-15 TADA Tadashi <sho@spc.gr.jp>
	* theme/base.css: add calendar2.rb plugin's default image settings.

2005-08-15 akira yamada <akira at arika.org>
	* filter/spam.rb, plugin/10spamfilter.rb: add dispose mode, more check mail
	address and date limitation.

2005-08-10  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (my): use absolute URLs.

2005-08-10 zunda <zunda at freeshell.org>
	* tdiary/lang/ja.rb: use NKF to convert to charset when NKF::UTF8 defined.

2005-08-08 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: TSUKKOMI mail plugin: add new option send mail when filter hide TSUKKOMI.

2005-08-07 akira yamada <akira at arika.org>
	* filter/spam.rb: fix bug abut  @max_uris checking.
	* filter/spam.rb: add checking TLD.

2005-07-27 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb, tdiary/defaultio.rb, tdiary/pstoreio.rb,
	tdiary/tdiary_style.rb, tdiary/filter/default.rb, tdiary/lang/en.rb,
	tdiary/lang/ja.rb, tdiary/lang/zh.rb, theme/base.css: add license.
	* add plugin/10spamfilter.rb and rename 01sp.rb to 50sp.rb.

2005-07-21 zunda <zunda at freeshell.org>
	* tdiary/defaultio.rb DefaultIO#restore(): move rescue clause later: